After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 732137 - [PATCH] Fix building quartz backend
[PATCH] Fix building quartz backend
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Backend: Quartz
3.13.x
Other Mac OS
: Normal normal
: ---
Assigned To: gtk-quartz maintainers
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2014-06-23 23:11 UTC by Patrick Griffis (tingping)
Modified: 2014-08-03 21:23 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
[PATCH] Fix building quartz backend (2.17 KB, patch)
2014-06-23 23:11 UTC, Patrick Griffis (tingping)
committed Details | Review

Description Patrick Griffis (tingping) 2014-06-23 23:11:08 UTC
Created attachment 279076 [details] [review]
[PATCH] Fix building quartz backend

Some api changes were made without updating the quartz backend.

I made an assumption on the 'merge_sections' arg defaulting to TRUE
which seems like it was the old default based on the commit message.