Fix building quartz backend

These were some api changes introduced in:
d930716
48db841
f6ee007

https://bugzilla.gnome.org/show_bug.cgi?id=732137